--- a/urunler/golgelendirme-sistemleri.html
+++ b/urunler/golgelendirme-sistemleri.html
@@ -34,6 +34,22 @@
       as="script"
       href="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"
     />
+    <style>
+      .custom-i {
+        position: relative;
+      }
+      .custom-i::after {
+        content: "";
+        position: absolute;
+        top: 6px;
+        left: 40%;
+        transform: translateX(-50%);
+        width: 4px;
+        height: 4px;
+        background-color: #8d991e; /* blue-600 */
+        border-radius: 50%;
+      }
+    </style>
   </head>
   <body class="font-sans text-gray-800 min-h-screen flex flex-col">
     <!-- HEADER -->
@@ -41,7 +57,9 @@
       <div class="max-w-7xl mx-auto flex justify-between items-center p-4">
         <!-- Logo -->
         <a href="/" class="flex flex-col leading-tight">
-          <span class="text-2xl font-bold tracking-widest">halis</span>
+          <span class="text-2xl font-bold tracking-widest">
+            hal<span class="custom-i" style="text-decoration: none">ı</span>s
+          </span>
           <span class="text-xs text-gray-500"
             >Alüminyum Doğrama Sistemleri</span
           >
