mobile menu update

--- a/index.html
+++ b/index.html
@@ -279,17 +279,47 @@
               <a
                 href="/urunler/cift-kanatli-kapi.html"
                 class="block py-2 text-sm hover:text-blue-600"
-                >Çift Kanatlı Kapı</a
-              >
-              <a
-                href="/urunler/korkuluk-sistemi.html"
-                class="block py-2 text-sm hover:text-blue-600"
-                >Korkuluk Sistemi</a
+                >Alüminyum Pencere & Kapı</a
               >
               <a
                 href="/urunler/cam-balkon.html"
                 class="block py-2 text-sm hover:text-blue-600"
                 >Cam Balkon</a
+              >
+              <a
+                href="/urunler/korkuluk-sistemi.html"
+                class="block py-2 text-sm hover:text-blue-600"
+                >Fıratpen Pencere & Kapı</a
+              >
+              <a
+                href="/urunler/giyotin-cam-sistemleri.html"
+                class="block py-2 text-sm hover:text-blue-600"
+                >Giyotin Cam Sistemleri</a
+              >
+              <a
+                href="/urunler/golgelendirme-sistemleri.html"
+                class="block py-2 text-sm hover:text-blue-600"
+                >Gölgelendirme Sistemleri</a
+              >
+              <a
+                href="/urunler/korkuluk-sistemleri.html"
+                class="block py-2 text-sm hover:text-blue-600"
+                >Korkuluk Sistemleri</a
+              >
+              <a
+                href="/urunler/otomatik-kepenk.html"
+                class="block py-2 text-sm hover:text-blue-600"
+                >Otomatik Kepenk</a
+              >
+              <a
+                href="/urunler/pergola-sistemleri.html"
+                class="block py-2 text-sm hover:text-blue-600"
+                >Pergola Sistemleri</a
+              >
+              <a
+                href="/urunler/sineklik.html"
+                class="block py-2 text-sm hover:text-blue-600"
+                >Sineklik</a
               >
             </div>
           </div>
